--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,16 @@ body{
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/*
+In globals.css
+.hide-scrollbar {
+  -ms-overflow-style: none;   IE and Edge 
+  scrollbar-width: none;      Firefox 
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+}
+display: none;              Chrome, Safari and Opera */
+
+
 
